--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ project-files/dynamips/ilt_*_ppc32e
 project-files/dynamips/ilt_*_ppc32j
 project-files/**/*.log
 
+# Xournal++ Ignore
+*.xopp
+
 # Created by https://www.toptal.com/developers/gitignore/api/c
 # Edit at https://www.toptal.com/developers/gitignore?templates=c
 
