--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ server
 *.zip
 
 # GNS 3 Ignore
+*.ghost
 project-files/dynamips/**/*_lock
 project-files/dynamips/**/*_log.txt
 project-files/dynamips/**/*_stdout.txt
@@ -12,6 +13,11 @@ project-files/dynamips/ilt_*_mips64e
 project-files/dynamips/ilt_*_mips64j
 project-files/dynamips/ilt_*_ppc32e
 project-files/dynamips/ilt_*_ppc32j
+project-files/dynamips/*/c2691_*_rom
+project-files/dynamips/*/c2691_*_rommon_vars
+project-files/dynamips/*/c2691_*_slot0
+project-files/dynamips/*/c2691_*_slot1
+project-files/dynamips/*/c2691_*_ssa
 project-files/**/*.log
 project-files/docker
 !project-files/docker/
