--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+.clangd
+class_client
+class_server
+obj
+*.pdf
+*.zip
+
 # GNS 3 Ignore
+*.ghost
 project-files/dynamips/**/*_lock
 project-files/dynamips/**/*_log.txt
 project-files/dynamips/**/*_stdout.txt
@@ -6,7 +14,22 @@ project-files/dynamips/ilt_*_mips64e
 project-files/dynamips/ilt_*_mips64j
 project-files/dynamips/ilt_*_ppc32e
 project-files/dynamips/ilt_*_ppc32j
+project-files/dynamips/*/c2691_*_rom
+project-files/dynamips/*/c2691_*_rommon_vars
+project-files/dynamips/*/c2691_*_slot0
+project-files/dynamips/*/c2691_*_slot1
+project-files/dynamips/*/c2691_*_ssa
 project-files/**/*.log
+project-files/docker
+!project-files/docker/
+project-files/docker/*
+!project-files/docker/*/
+project-files/docker/*/*
+!project-files/docker/*/etc/
+project-files/docker/*/etc/*
+!project-files/docker/*/etc/network/
+project-files/docker/*/etc/network/*
+!project-files/docker/*/etc/network/interfaces
 
 # Xournal++ Ignore
 *.xopp
