--- a/project-files/dynamips/ea74f424-b210-4869-b7ad-3a4f285bf194/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/ea74f424-b210-4869-b7ad-3a4f285bf194/configs/i1_startup-config.cfg
@@ -1,6 +1,4 @@
 !
-!
-!
 
 !
 version 12.4
@@ -80,6 +78,7 @@ interface FastEthernet1/0
  speed auto
 !
 ip forward-protocol nd
+ip route 193.137.100.128 255.255.255.128 193.137.101.253
 !
 !
 no ip http server
