--- a/project-files/dynamips/bf84ef1a-7416-46d7-9ba8-05f20b55c643/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/bf84ef1a-7416-46d7-9ba8-05f20b55c643/configs/i3_startup-config.cfg
@@ -1,14 +1,4 @@
 !
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
 
 !
 version 12.4
@@ -31,6 +21,7 @@ ip cef
 !
 !
 no ip domain lookup
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -68,6 +59,7 @@ ip tcp synwait-time 5
 !
 interface FastEthernet0/0
  ip address 193.137.101.252 255.255.255.0
+ ip pim sparse-dense-mode
  ip nat outside
  ip virtual-reassembly
  duplex auto
@@ -80,6 +72,7 @@ interface Serial0/0
 !
 interface FastEthernet0/1
  ip address 10.5.2.62 255.255.255.192
+ ip pim sparse-dense-mode
  ip nat inside
  ip virtual-reassembly
  duplex auto
