--- a/project-files/dynamips/ea74f424-b210-4869-b7ad-3a4f285bf194/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/ea74f424-b210-4869-b7ad-3a4f285bf194/configs/i1_startup-config.cfg
@@ -21,6 +21,7 @@ ip cef
 !
 !
 no ip domain lookup
+ip multicast-routing 
 !
 multilink bundle-name authenticated
 !
@@ -58,6 +59,7 @@ ip tcp synwait-time 5
 !
 interface FastEthernet0/0
  ip address 193.137.100.126 255.255.255.128
+ ip pim sparse-dense-mode
  duplex auto
  speed auto
 !
@@ -68,6 +70,7 @@ interface Serial0/0
 !
 interface FastEthernet0/1
  ip address 193.137.101.254 255.255.255.0
+ ip pim sparse-dense-mode
  duplex auto
  speed auto
 !
