fix github workflow: checkout submodules before compilation

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,5 +15,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: textbook/git-checkout-submodule-action@master
     - name: Compilation
       run: make --jobs=4 --output-sync=target
