--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install pandoc
+      run: sudo apt-get install -y pandoc
     - name: Checkout Git Submodules
       run: git submodule update --init --recursive
     - name: Compilation
