--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -11,11 +11,13 @@ on:
 jobs:
   build:
 
-    runs-on: pandoc/latex
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Compile Latex
-      run: make Relatorio-RC-Meta_2/main.pdf
-    - name: Compile Markdown
+    - name: Install pandoc and pdflatex
+      run: sudo apt-get install -y pandoc texlive-latex-base texlive-latex-extra texlive-latex-recommended
+    - name: Markdown Compilation
       run: make relatorio.pdf
+    - name: Latex Compilation
+      run: make Relatorio-RC-Meta_2/main.pdf
