c/c++ workflow compile targets

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Checkout Git Submodules
       run: git submodule update --init --recursive
     - name: Compilation
-      run: make --jobs=4 --output-sync=target
+      run: make --jobs=4 --output-sync=target class_server class_client
