install all texlive packages

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install pandoc and pdflatex
-      run: sudo apt-get install -y pandoc texlive-latex-base texlive-latex-extra texlive-latex-recommended
+      run: sudo apt-get install -y pandoc texlive-full
     - name: Markdown Compilation
       run: make relatorio.pdf
     - name: Latex Compilation
