--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -16,6 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install pandoc and pdflatex
-      run: sudo apt-get install -y pandoc texlive-base latex texlive-latex-recommended texlive-latex-extra texlive-lang-portuguese
+      run: sudo apt-get install -y texlive-base texlive-latex-extra texlive-lang-portuguese texlive-science texlive-bibtex-extra
     - name: Latex Compilation
       run: make relatorio.pdf
